Create basic creation flow of new service